# adapt

./: .coveragerc  .gitignore  .readthedocs.yml  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  tests.yml
Notes/: architecture.dot  architecture.plantuml
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.md  faq.md  index.rst  installation.md  pipeline.md
notebooks/: analysis_db_display.ipynb
scripts/: demo_data_api.ipynb  plot_from_data.py  run_nexrad_pipeline.py  user_config.py
src/: expert_config.py  param_config.py
src/adapt/: __init__.py  config.py  setup_directories.py
src/adapt/cli/: __init__.py  run_nexrad.py
src/adapt/contracts/: __init__.py  analysis.py  base.py  failure.py  grid.py  invariants.py  projection.py  segmentation.py
src/adapt/core/: __init__.py  data_repository.py
src/adapt/pipeline/: __init__.py  file_tracker.py  orchestrator.py  processor.py
src/adapt/radar/: __init__.py  cell_analyzer.py  cell_projector.py  cell_segmenter.py  downloader.py  loader.py  radar_utils.py
src/adapt/schemas/: __init__.py  base.py  cli.py  initialization.py  internal.py  param.py  resolve.py  user.py
src/adapt/visualization/: __init__.py  plotter.py
tests/: conftest.py  test_cell_analyzer_basic_extract.py  test_cell_analyzer_utils.py  test_config_validation.py  test_downloader_integration.py  test_downloader_queue.py  test_downloader_run.py  test_projector_internal_utils.py  test_segmenter_init.py
tests/contracts/: test_contracts.py
tests/core/: test_data_repository.py
tests/helpers/: fake_grid.py  fake_netcdf.py
tests/pipeline/: conftest.py  test_file_tracker.py  test_orchestrator.py  test_processor_core.py  test_processor_failures.py  test_processor_with_fake_grid.py
tests/radar/: conftest.py  test_cell_analyzer_basic_extract.py  test_cell_analyzer_centroids.py  test_cell_analyzer_init.py  test_cell_analyzer_optional_fields.py  test_cell_analyzer_utils.py  test_cell_analyzer_validation.py  test_downloader_availability.py  test_downloader_failures.py  test_downloader_historical.py  test_downloader_init.py  test_downloader_integration.py  test_downloader_queue.py  test_downloader_realtime.py  test_downloader_run.py  test_loader_core.py  test_loader_extended.py  test_projector_init.py  test_projector_internal_utils.py  test_projector_projection_basic.py  test_projector_projection_configs.py  test_projector_validation.py  test_radar_utils.py  test_segmenter_contract.py  test_segmenter_failures.py  test_segmenter_filtering.py  test_segmenter_init.py  test_segmenter_morphology.py  test_segmenter_threshold.py
tests/schemas/: test_cli_config.py  test_cli_precedence.py  test_config_resolution.py  test_userconfig_normalization.py
tests/utils/: test_setup_directories.py  test_setup_directories_extended.py
