[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "adapt"
version = "0.1.0"
description = " `Adapt` is currently in active development and internal testing as part of ongoing research into adaptive radar scanning. Supported by the U.S. Department of Energy as part of the Atmospheric Radiation Measurement (ARM) Research Facility, an Office of Science user facility."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "scikit-image",
    "matplotlib",
    "h5py",
    "netCDF4",
    "tqdm"
]

[project.scripts]
adapt-nexrad-pipeline = "scripts.run_nexrad_pipeline:main"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

markers = [
    "unit: fast unit tests (no IO)",
    "pipeline: pipeline tests with mocks",
    "integration: tests requiring real or on-disk data",
    "slow: long-running tests",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "xarray",
  "numpy",
  "arm_pyart",
]

docs = [
  "sphinx",
  "sphinx-rtd-theme",
]
